--- a/src/index.css
+++ b/src/index.css
@@ -161,3 +161,8 @@ body {
     font-size: 20px;
     color: #C3392A;
   }
+
+  .highlight {
+    color: rgb(17, 17, 17);
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  }
